@@ -146,10 +146,6 @@ bootRun {
     main = "com.faforever.client.Main"
 }
 
-run {
-  jvmArgs = ['--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED']
-}
-
 jar {
   manifest {
     attributes "Main-Class": "com.faforever.client.Main",
@@ -328,5 +324,3 @@ dependencies {
 
   codacy("com.github.codacy:codacy-coverage-reporter:-SNAPSHOT")
 }
-
-def void run(groovy.lang.Closure closure) {}
